--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Header section start -->
-    <Header>
+    <Header class="container">
         <nav class="navbar navbar-expand-lg bg-light ">
             <div class="container ">
                 <a class="navbar-brand " href="#">Digital Learning</a>
@@ -47,9 +47,40 @@
                 </div>
             </div>
         </nav>
-        <section>
-
+        <!-- slider area starts-->
+        <section class="mt-4">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block mb-5">
+                                <h1>Get Started Digital
+                                    Learning</h1>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </section>
+        <!-- slider area ends-->
     </Header>
     <!-- Header section end -->
 
