--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Digital University</title>
+    <!-- Bottstrap css cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -12,77 +13,248 @@
 <body>
 
     <!-- Header section start -->
-    <Header class="container">
+    <Header id="Home">
         <nav class="navbar navbar-expand-lg bg-light ">
             <div class="container ">
-                <a class="navbar-brand " href="#">Digital Learning</a>
+                <a class="navbar-brand " href="#">
+                    <img src="images/favicon.jpg" alt="" width="60" class="d-inline-block align-text-center">
+                    <span class="fs-3 fw-semibold">Digitor</span>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active ms-4" aria-current="page" href="#Home">Home</a>
+                        </li>
+                        <li class="nav-item ms-4">
+                            <a class="nav-link" href="#Courses">Courses</a>
+                        </li>
+                        <li class="nav-item ms-4">
+                            <a class="nav-link" href="#Question">Question</a>
+                        </li>
+                        <li class="nav-item ms-4">
+                            <a class="nav-link" href="#Success">Success </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link ms-4 me-5" href="#About">About </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Deals</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Success </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Register </a>
-                        </li>
-
                     </ul>
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <form class="d-flex" role="search">
+                        <a href="#Register" class="btn btn-outline-info  py-2 px-4" type="submit">Register</a>
+                    </form>
+
                 </div>
             </div>
         </nav>
-        <!-- slider area starts-->
-        <section class="mt-4">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
+    </Header>
+    <!-- Header section end -->
+    <main class="container">
+        <!-- slideer start -->
+
+        <section class="">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-label="Slide 1" aria-current="true"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2" class=""></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3" class=""></button>
+                </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row">
-                            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block mb-5">
-                                <h1>Get Started Digital
-                                    Learning</h1>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded">
+                            <h1 class="fw-bold">Get Started Digital <br> Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the <br> readable
+                                content of a page when looking at its layout.</p>
+                            <button class="btn btn-info text-white py-2 px-4 mb-3" type="submit">Get
+                                Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded">
+                            <h1 class="fw-bold">Get Started Digital <br> Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the <br> readable
+                                content of a page when looking at its layout.</p>
+                            <button class="btn btn-info text-white py-2 px-4 mb-3" type="submit">Get
+                                Started</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded">
+                            <h1 class="fw-bold">Get Started Digital <br> Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the <br> readable
+                                content of a page when looking at its layout.</p>
+                            <button class="btn btn-info text-white py-2 px-4 mb-3" type="submit">Get
+                                Started</button>
+                        </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+
         </section>
-        <!-- slider area ends-->
-    </Header>
-    <!-- Header section end -->
+        <!-- Slider end -->
+        <!-- Courses Start -->
+        <section class="section-gap" id="Courses">
+            <div class="text-center  ">
+                <h1 class="fw-semibold ">Discover Our Popular <br> Courses</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when looking at its layout.</p>
+            </div>
+
+            <div class="courses mt-4">
+                <div class="row">
+
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-lg-4 col-md-4  col-sm-12" id="course-img">
+                                    <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the
+                                            bulk of the card.</p>
+                                        <p class="card-text fw-semibold"><small class="text-primary">Price : 20$</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the
+                                            bulk of the card.</p>
+                                        <p class="card-text fw-semibold"><small class="text-primary">Price : 20$</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-6 col-md-12 col-sm-12 ">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title fw-bold">Fullstack Web Development</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the
+                                            bulk of the card.</p>
+                                        <p class="card-text fw-semibold"><small class="text-primary">Price : 20$</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-6 col-md-12 col-sm-12    ">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title fw-bold">Digital Marketing</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the
+                                            bulk of the card.</p>
+                                        <p class="card-text fw-semibold"><small class="text-primary">Price : 20$</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-12 col-sm-12    ">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title fw-bold">Photography Basic Rules</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the
+                                            bulk of the card.</p>
+                                        <p class="card-text fw-semibold"><small class="text-primary">Price : 20$</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-12 col-sm-12    ">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title fw-bold">Motion Graphics</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the
+                                            bulk of the card.</p>
+                                        <p class="card-text fw-semibold"><small class="text-primary">Price : 20$</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="text-center mt-4">
+                        <button class="btn btn-info text-white py-2 px-4 mb-3 d-inline" type="submit">See More
+                            Courses</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Courses end -->
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
