--- a/index.html
+++ b/index.html
@@ -254,6 +254,49 @@
             </div>
         </section>
         <!-- Courses end -->
+        <!-- About section start -->
+        <section class="section-gap" id="About">
+            <div class="row">
+                <div class="col-lg-6 col-md-5 col-sm-12 d-flex justify-content-end p-0">
+                    <img src="images/working.png" class="img-fluid w-100" alt="">
+
+                </div>
+                <div class="col-lg-6 col-md-7 col-sm-12 d-flex flex-column justify-content-evenly bg-light p-4 ">
+                    <div>
+                        <h1 class="fw-bold">Explore The elearning Institute</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised words which don't look
+                            even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be
+                            sure. <br> <br>
+
+                            Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                            Internet tend to repeat predefined.</p>
+                    </div>
+
+                    <div class="">
+                        <div class="d-flex justify-content-between mb-4">
+                            <div>
+                                <h1 class="fw-bold">3.2K+</h1>
+                                <small>Online Course</small>
+                            </div>
+                            <div>
+                                <h1 class="fw-bold">600+</h1>
+                                <small>Expert member</small>
+                            </div>
+                            <div>
+                                <h1 class="fw-bold">1k+</h1>
+                                <small>Rating &amp; Review</small>
+                            </div>
+                        </div>
+                        <button class="btn btn-info text-white">Read More</button>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+        <!-- About section End -->
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
