--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="#Courses">Courses</a>
                         </li>
                         <li class="nav-item ms-4">
-                            <a class="nav-link" href="#Question">Question</a>
+                            <a class="nav-link" href="#Questions">Question</a>
                         </li>
                         <li class="nav-item ms-4">
                             <a class="nav-link" href="#Success">Success </a>
@@ -297,6 +297,230 @@
 
         </section>
         <!-- About section End -->
+        <!-- Register joint start -->
+        <section class="section-gap" id="Register">
+            <div class="row bg-info p-5 text-white rounded">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <h1>Ready to join?</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-end align-items-center">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-light text-info" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        Register
+                        Now
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title text-info" id="exampleModalLabel">Register Now</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="text-black">Ready to join?</p>
+                                    <small class="text-black">It is a long established fact that a reader will be
+                                        distracted by the readable content of a page when looking at its layout.</small>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Register joint end -->
+        <!-- Student success start -->
+        <section class="section-gap" id="Success">
+            <div class="">
+                <h1 class="fw-semibold ">Meet Our Successfull <br> Students</h1>
+                <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page
+                    when looking at its layout..</p>
+            </div>
+
+            <div class="row g-4 mt-4">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">
+                            </p>
+                            <h5 class="fw-bold">Marques Brownlee </h5>
+                            <small class="text-muted">UIUX Designer</small>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">
+                            </p>
+                            <h5 class="fw-bold">Ema Watson</h5>
+                            <small class="text-muted">Motion Graphics
+                            </small>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">
+                            </p>
+                            <h5 class="fw-bold">Marlon Brando </h5>
+                            <small class="text-muted">Photograph</small>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">
+                            </p>
+                            <h5 class="fw-bold">Anne Hathaway </h5>
+                            <small class="text-muted">Fullstack</small>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-center mt-4">
+                    <button class="btn btn-info text-white">View All</button>
+                </div>
+
+            </div>
+
+        </section>
+        <!-- Student success end -->
+        <!-- Asked Questions start -->
+        <section class="section-gap" id="Questions">
+            <div class="text-center  ">
+                <h1 class="fw-semibold ">Frequently Asked Questions</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when looking at its layout.</p>
+            </div>
+
+            <div class="mt-4 d-flex justify-content-center">
+                <div class="accordion w-75" id="accordionPanelsStayOpenExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                aria-controls="panelsStayOpen-collapseOne">
+                                What is the difference between Flexbox and Grid?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                            aria-labelledby="panelsStayOpen-headingOne">
+                            <div class="accordion-body">
+                                flexbox এটি one-dimontional layout. এটি default ভাবে এটি row detraction থাকে। এবং layout
+                                এলাইমেন্ট ঠিক রাখতে বেশি use করা হয়।
+                                grid এটি multiple deration.এবং layout করার জন্য grid used হয়। এটি মাধ্যমে অনেক সহজে
+                                responsive layout করা হয়ে থাকে।
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseTwo">
+                                What is the difference between Bootstrap vs Tailwind CSS?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                            aria-labelledby="panelsStayOpen-headingTwo">
+                            <div class="accordion-body">
+                                bootstrap component and utilities base css framework and tailwind utilities base অনেক
+                                বেশি costomization obson থাকে। এজন্য সহজে ইচ্ছে মত responsive design করা যায়। bootstrap
+                                component দিয়ে অনেক কম সমায়ে ডিজান layout copy করে কাজ করা যায়। কিন্তু মনে মতো ডিজাইন
+                                করতে তার bootstrap সাথে row-css used করা লাগে।
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseThree">
+                                What is box modal in CSS?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                            aria-labelledby="panelsStayOpen-headingThree">
+                            <div class="accordion-body">
+                                hight width এর ভিতর কন্টেন্ট থাকে। কন্টেন্ট ভিতর অংশে padding থাকে বাইরে অংশে margin
+                                থাকে এবং margin gap এর জন্য used করা হয়।এই সবগুলো মিলে css box-model.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseFour">
+                                What is semantic tags ?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                            aria-labelledby="panelsStayOpen-headingFour">
+                            <div class="accordion-body">
+                                semantic tag বলতে HTML5 tag গুলো layout header, main, article, footer এই tag গুলো
+                                মিনিংফুল নাম বহন করে।
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Asked Questions End -->
+        <!-- Companies Brand start -->
+        <section class="section-gap  d-none d-lg-block">
+            <div class="">
+                <h1 class="text-center fw-semibold ">Trusted by over 800+ companies</h1>
+                <div class="d-flex justify-content-between align-items-center mt-5">
+                    <div>
+                        <img src="images/company/company-1.png" alt="" class="img-fluid">
+                    </div>
+                    <div>
+                        <img src="images/company/company-2.png" alt="" class="img-fluid">
+                    </div>
+                    <div>
+                        <img src="images/company/company-3.png" alt="" class="img-fluid">
+                    </div>
+                    <div>
+                        <img src="images/company/company-4.png" alt="" class="img-fluid">
+                    </div>
+                    <div>
+                        <img src="images/company/company-5.png" alt="" class="img-fluid">
+                    </div>
+                    <div>
+                        <img src="images/company/company-6.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+        <!-- Companies Brand end -->
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
