--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Header section start -->
     <Header id="Home">
-        <nav class="navbar navbar-expand-lg bg-light ">
+        <nav class="navbar navbar-expand-lg bg-light py-5 ">
             <div class="container ">
                 <a class="navbar-brand " href="#">
                     <img src="images/favicon.jpg" alt="" width="60" class="d-inline-block align-text-center">
